[package]
name = "backlightd"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
toml = "0.7"
clap = {version = "4.0", features = ["derive", "env"]}

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
