[package]
name = "backlightd"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
toml = "0.7"
clap = {version = "4.0", features = ["derive", "env"]}
env_logger = "0.10"
log = "0.4"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
